--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   get: ^4.6.6
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.1.0
+  go_router: ^13.1.0
+  uuid: ^4.3.3
+  url_launcher: ^6.2.4
+  flutter_riverpod: ^2.4.10
+  flash: ^3.1.0
 
 
 dev_dependencies:
@@ -65,7 +70,7 @@ flutter:
     - assets/images/
     - assets/images/splash_images/
     - assets/images/on_bording_images/
-    # - assets/images/books.png
+    - assets/images/welcome_images/
     # - assets/images/books1.png
     # - assets/images/cloud-computing(1).png
     # - assets/images/cloud-computing.png
