--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.2.4
   flutter_riverpod: ^2.4.10
   flash: ^3.1.0
+  flutter_otp_text_field: ^1.1.1
 
 
 dev_dependencies:
