--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
     - assets/images/welcome_images/
     - assets/images/forgot_password_images/
     - assets/images/dashboard/
-    # - assets/images/cloud-computing.png
+    - assets/images/profile/
     # - assets/images/splash_screen_image_vote.png
     # - assets/images/user.png
     # - assets/images/tick-vote.jpeg
