--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_riverpod: ^2.4.10
   flash: ^3.1.0
   flutter_otp_text_field: ^1.1.1
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.4
 
 
 dev_dependencies:
