--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   google_fonts: ^6.1.0
   flutter_native_splash: ^2.3.9
   animations: ^2.0.11
@@ -47,6 +47,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
+  line_awesome_flutter: ^2.0.0
 
 
 dev_dependencies:
