--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_auth: ^4.17.4
   line_awesome_flutter: ^2.0.0
   cloud_firestore: ^4.15.5
+  firebase_dynamic_links: ^5.4.16
+  logger: ^2.1.0
 
 
 dev_dependencies:
