--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_dynamic_links: ^5.4.16
   logger: ^2.1.0
   firebase_analytics: ^10.8.9
+  syncfusion_flutter_charts: ^25.1.35
 
 
 dev_dependencies:
